# Password-Auditing-Suite

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
pas/: __init__.py  breach.py  cracker.py  exceptions.py  identifier.py  models.py  mutator.py  reporter.py  scorer.py
samples/: README.md  bcrypt_hashes.txt  md5_hashes.txt  mixed_hashes.txt  sha1_hashes.txt  sha256_hashes.txt  tiny_wordlist.txt  user_hashes.txt
tests/: test_cracker.py  test_identifier.py  test_mutator.py  test_scorer.py
