[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-auditing-suite"
version = "0.1.0"
description = "Expert-grade offline password auditing toolkit — mutation engine, hash identification, HIBP breach checks, entropy scoring."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["security", "password", "auditing", "hashcracking", "entropy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "requests>=2.31",
    "urllib3>=2.0",
    "passlib[bcrypt]>=1.7",
]

[project.optional-dependencies]
argon2 = ["passlib[argon2]>=1.7"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "responses>=0.25",   # mock requests for breach tests
]

[project.scripts]
pas = "cli:cli"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pas*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # do not perform function calls in default arguments (Click uses this)
]

[tool.ruff.lint.isort]
known-first-party = ["pas"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["pas"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
